<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.truckplatooningkans352.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_new_platoon"
        android:name="com.example.truckplatooningkans352.ui.newPlatoon.NewPlatoonFragment"
        android:label="@string/title_PlatoonInfo"
        tools:layout="@layout/fragment_new_platoon" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.truckplatooningkans352.ui.truckInfo.TruckInfoFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />
</navigation>